--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "typescript.tsdk": "./node_modules/typescript/lib",
     "vsicons.presets.angular": true,
     "cSpell.words": [
-        "ngrx"
+        "ngrx",
+        "typescale"
     ],
     "xd.globalEditor": true,
-    "xd.lastPackage": "/home/sten/workspace/mirror-match/src/dsp"
+    "xd.lastPackage": "/c:/Users/sindzeos/workspace/mirror-match/src/dsp"
 }
