--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@ngrx/router-store": "^13.0.1",
     "@ngrx/store": "^13.0.1",
     "@ngrx/store-devtools": "^13.0.1",
-    "core-js": "^2.6.11",
     "document-register-element": "^1.14.10",
     "rxjs": "^6.6.7",
     "style-dictionary": "^3.0.3",
@@ -40,7 +39,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular-devkit/build-angular": "^0.1002.1",
     "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^13.0.2",
     "@ngrx/schematics": "^13.0.1",
@@ -60,7 +59,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "^2.1.2",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "^8.8.2",
     "typescript": "4.4.4"
   }
