--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@types/node": "^12.12.68",
     "codelyzer": "^6.0.0",
     "eslint": "^8.3.0",
-    "jasmine": "^3.6.2",
-    "jasmine-core": "~3.6.0",
+    "jasmine": "^4.1.0",
+    "jasmine-core": "^4.1.1",
     "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
@@ -56,7 +56,7 @@
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^2.1.2",
     "typescript": "4.4.4"
   }
