--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,13 @@ addons:
 
 cache:
   directories:
-     - ./node_modules
+    - ./node_modules
 
 install:
   - npm install
+
+before_script:
+  - npm install -g @angular/cli
 
 script:
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
