--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "postcss": "^8.4.14",
     "prettier": "^2.1.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.0.24",
     "typescript": "4.4.4"
   }
