--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             ],
             "styles": ["src/styles/main.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": []
+              "includePaths": ["src/styles"]
             },
             "scripts": []
           },
