--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
             "tsConfig": "tsconfig.spec.json",
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
