--- a/package.json
+++ b/package.json
@@ -42,18 +42,13 @@
     "@angular/compiler-cli": "^13.3.11",
     "@ngrx/schematics": "^13.0.1",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.68",
     "codelyzer": "^6.0.0",
     "eslint": "^8.3.0",
-    "jasmine": "^4.1.0",
     "jasmine-core": "^4.1.1",
-    "jasmine-marbles": "^0.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "^2.2.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^2.1.2",
