--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/platform-server": "^8.2.13",
-    "@angular/router": "^8.2.13",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/platform-server": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/entity": "^8.6.0",
     "@ngrx/store": "^8.6.0",
@@ -32,12 +32,12 @@
     "jquery": "^3.5.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.13",
+    "@angular-devkit/build-angular": "^0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
     "@ngrx/schematics": "^8.6.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
@@ -56,6 +56,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^8.8.2",
     "tslint": "^5.20.1",
-    "typescript": "<3.6"
+    "typescript": "3.8.3"
   }
 }
