--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "prettier": "2.8.1",
     "protractor": "^7.0.0",
     "ts-node": "^8.8.2",
-    "tslint": "^5.20.1",
+    "tslint": "~6.1.0",
     "typescript": "4.0.8"
   }
 }
