--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "core-js": "^2.6.11",
     "jquery": "^3.5.0",
     "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -44,17 +44,17 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine": "^3.5.0",
-    "jasmine-core": "^3.5.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.6.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^5.0.1",
-    "karma-chrome-launcher": "^3.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.8.1",
-    "protractor": "^7.0.0",
+    "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
     "tslint": "~6.1.0",
     "typescript": "4.0.8"
