--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,5 +16,8 @@
     "typeRoots": ["../node_modules/@types"]
   },
   "files": ["main.ts"],
-  "include": ["src/**/*.d.ts"]
+  "include": ["src/**/*.d.ts"],
+  "angularCompilerOptions": {
+    "strictTemplates": true
+  }
 }
