--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/jasmine": "^3.5.10",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-jasmine": "~4.0.0",
