--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jasmine-core": "^4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.2.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.8.1",
