--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.11",
     "jquery": "^3.5.0",
-    "rxjs": "^6.5.5",
+    "rxjs": "^7.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -43,6 +43,7 @@
     "@types/node": "^18.11.13",
     "codelyzer": "^6.0.2",
     "jasmine-core": "^4.5.0",
+    "jasmine-marbles": "^0.9.2",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
