--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,32 +5,32 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["ES2022", "dom"],
     "mapRoot": "./",
-    "module": "es2020",
+    "module": "ES2022",
     "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
     "paths": {
-      "app/*": [
-        "src/app/*"
-      ]
+      "app/*": ["src/app/*"]
     },
     "sourceMap": true,
+    "strict": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
 }
