--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
             "outputPath": "dist/mirror-match",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "polyfills": "zone.js",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
