--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,5 +4,5 @@
     "outDir": "./out-tsc/app",
     "types": ["node"]
   },
-  "files": ["src/main.ts", "src/polyfills.ts"]
+  "files": ["src/main.ts"]
 }
