--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.5",
+    "@angular/cdk": "~16.2.0",
     "@angular/common": "^16.1.5",
     "@angular/compiler": "^16.1.5",
     "@angular/core": "^16.1.5",
     "@angular/elements": "^16.1.5",
     "@angular/forms": "^16.1.5",
+    "@angular/material": "~16.2.0",
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/platform-server": "^16.1.5",
