--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "e2e": "protractor",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "ng": "ng",
-    "postinstall": "ngcc --tsconfig tsconfig.app.json",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "start": "ng serve",
     "test": "ng test"
@@ -54,11 +53,11 @@
     "eslint": "^8.47.0",
     "jasmine-core": "^4.6.0",
     "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.1",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
-    "karma-jasmine": "~4.0.2",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^3.0.2",
-    "typescript": "5.1.5"
+    "typescript": "^5.1.6"
   }
 }
